# dns-proxy-server

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.yaml  main.c  test.sh
LICENSES/: libyaml-LICENSE.md
include/: dns_error.h  dns_proxy.h  dns_proxy_config.h  dns_proxy_error.h  dns_proxy_request.h  dns_proxy_server.h  dns_proxy_utils.h
src/: dns_error.c  dns_proxy.c  dns_proxy_config.c  dns_proxy_error.c  dns_proxy_request.c  dns_proxy_server.c  dns_proxy_utils.c
